Note FP5 minimum

--- a/v11/en/details.html
+++ b/v11/en/details.html
@@ -52,7 +52,7 @@
   <hr>
   <div class="row">
     <div class="small-12 medium-12 large-12 columns">
-      <h5> Learn how to assign custom keywords to message flows and then once deployed, read the keywords using the Java Integration API </h5>
+      <h5> Learn how to assign custom keywords to message flows and then once deployed, read the keywords using the Java Integration API (requires v11.0.0.5 or higher). </h5>
     </div>
   </div>
   <div class="row content-details">
