--- a/v11/en/steps.html
+++ b/v11/en/steps.html
@@ -52,7 +52,7 @@
 	<hr>
 	<div class="row">
 		<div class="small-10 medium-10 large-10 columns">
-		<h5> Learn how to assign custom keywords to message flows and then once deployed, read the keywords using the Java Integration API </h5>
+		<h5> Learn how to assign custom keywords to message flows and then once deployed, read the keywords using the Java Integration API (requires v11.0.0.5 or higher). </h5>
 		</div>
 		<div class="small-2 medium-2 large-2 columns">
 			<button class="small radius button right" tabindex="0" id="backToGallery" onclick="backToGallery()"> Back To Gallery
